# DeepChopper

./: .bumpversion.toml  .conda_config  .gitignore  .pre-commit-config.yaml  .vale.ini  AGENTS.md  CHANGELOG.md  CITATION.cff  CI_PATH_FILTERS.md  CONTRIBUTING.md  Cargo.toml  DOCS_CI_UPDATE_SUMMARY.md  LICENSE  Makefile  README.md  cliff.toml  environment.yaml  hg_train.py  hg_train.sh  index.html  mkdocs.yml  predict.py  pyproject.toml  report_dynamo_export.sarif  tasks.py  train.sh  versions.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: docs-versions.yml  docs.yml  labeler.yml  release-python-cli.yml  release-python.yml
0.1.0/: index.html  sitemap.xml
0.1.0/cli-reference/: index.html
0.1.0/contributing/: index.html
0.1.0/faq/: index.html
0.1.0/installation/: index.html
0.1.0/parameters/: index.html
0.1.0/tutorial/: index.html
1.2.9/: 404.html  index.html  sitemap.xml
1.2.9/cli-reference/: index.html
1.2.9/contributing/: index.html
1.2.9/faq/: index.html
1.2.9/installation/: index.html
1.2.9/overrides/: main.html
1.2.9/parameters/: index.html
1.2.9/tutorial/: index.html
1.2.9alpha/: 404.html  index.html  sitemap.xml
1.2.9alpha/cli-reference/: index.html
1.2.9alpha/contributing/: index.html
1.2.9alpha/faq/: index.html
1.2.9alpha/installation/: index.html
1.2.9alpha/parameters/: index.html
1.2.9alpha/tutorial/: index.html
1.3.0/: 404.html  index.html  sitemap.xml
1.3.0/cli-reference/: index.html
1.3.0/contributing/: index.html
1.3.0/faq/: index.html
1.3.0/installation/: index.html
1.3.0/parameters/: index.html
1.3.0/search/: search_index.json
1.3.0/tutorial/: index.html
1.3.1/: 404.html  index.html  sitemap.xml
1.3.1/cli-reference/: index.html
1.3.1/contributing/: index.html
1.3.1/faq/: index.html
1.3.1/installation/: index.html
1.3.1/parameters/: index.html
1.3.1/tutorial/: index.html
1.3.2/: 404.html  index.html  sitemap.xml
1.3.2/cli-reference/: index.html
1.3.2/contributing/: index.html
1.3.2/faq/: index.html
1.3.2/installation/: index.html
1.3.2/parameters/: index.html
1.3.2/tutorial/: index.html
1.3.3/: 404.html  index.html  sitemap.xml
1.3.3/cli-reference/: index.html
1.3.3/contributing/: index.html
1.3.3/faq/: index.html
1.3.3/installation/: index.html
1.3.3/parameters/: index.html
1.3.3/tutorial/: index.html
1.3.4.dev0/: 404.html  index.html  sitemap.xml
1.3.4.dev0/cli-reference/: index.html
1.3.4.dev0/contributing/: index.html
1.3.4.dev0/faq/: index.html
1.3.4.dev0/installation/: index.html
1.3.4.dev0/parameters/: index.html
1.3.4.dev0/search/: search_index.json
1.3.4.dev0/tutorial/: index.html
configs/: __init__.py  eval.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml  write.yaml
configs/data/: fq.yaml  mnist.yaml
configs/experiment/: caduceus.yaml  cnn.yaml  hyena.yaml
configs/hparams_search/: cnn_optuna.yaml  hyena_optuna.yaml  mnist_optuna.yaml
configs/logger/: wandb.yaml
configs/model/: caduceus.yaml  cnn.yaml  heyna.yaml  hyena.yaml  mnist.yaml  transformer.yaml
configs/trainer/: gpu.yaml
deepchopper/: __init__.py  __init__.pyi  cli.py  eval.py  hg_train.py  predict.py  train.py
deepchopper/data/: __init__.py  encode_fq.py  fq_datamodule.py  hg_data.py  mnist_datamodule.py  only_fq.py
deepchopper/data/components/: __init__.py
deepchopper/models/: __init__.py  basic_module.py  callbacks.py  cnn.py  cnn_module.py  dc_hg.py  dummy.py  kan.py  mnist_module.py  tokenizers.py  transformer.py
deepchopper/models/components/: __init__.py  simple_dense_net.py
deepchopper/models/hyena/: __init__.py  components.py  lit.py  metric.py  tokenizer.py
deepchopper/models/llm/: __init__.py  caduceus.py  components.py  head.py  hyena.py  (+1 more)
deepchopper/ui/: main.py
deepchopper/utils/: __init__.py  instantiators.py  logging_utils.py  preprocess.py  print.py  pylogger.py  rich_utils.py  suppress_warnings.py  utils.py
dev/: 404.html  index.html  sitemap.xml
dev/cli-reference/: index.html
dev/contributing/: index.html
dev/faq/: index.html
dev/installation/: index.html
dev/parameters/: index.html
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/tutorial/: index.html
docs/: VERSIONING.md  cli-reference.md  contributing.md  faq.md  index.md  installation.md  parameters.md  tutorial.md  versions.md
docs/stylesheets/: extra.css
documentation/: index.html  parameters.md  proposal.tex  tutorial.md
notebooks/: Introduction.ipynb  cnn.ipynb  model.ipynb  overlap_result.json  protype.ipynb  smooth.ipynb  smooth2.ipynb
notebooks/custom-resnet/: config.json
notebooks/dnabert2_117M/: tokenizer.json
py_cli/: pyproject.toml
scripts/: alignment.sk  chop.sh  cnn.slurm  compare_dataset.py  compare_genes.py  compare_prediction.py  compute_distance.py  convert_pt_dtype.py  dc_gene_fusion.R  debug.ipynb  eval.sh  eval_with_bam.py  export_onnx.py  f121.sh  hct116.sh  hepg2.sh  hg_train.py  k562.sg  mcf7.sh  measure.sh  minimap2.sh  model_upload_guide.md  modle2hub.py  onnx.py  predict.sh  run.py  schedule.sh  wtc11.sh
src/: cli.rs  default.rs  error.rs  fq.rs  fq_encode.rs  kmer.rs  lib.rs  output.rs  python.rs  smooth.rs  stat.rs  tokenizer.rs  types.rs  utils.rs  vis.rs
src/fq_encode/: json_encoder.rs  option.rs  parquet_encoder.rs  record.rs  stat.rs  tensor_encoder.rs  triat.rs
src/output/: bam.rs  extract.rs  parquet.rs  split.rs  writefq.rs
src/smooth/: blat.rs  predict.rs  stat.rs  strategy.rs  utils.rs
tests/: conftest.py  test_datamodules.py  test_eval.py  test_log.py  test_rust.py  test_sweeps.py  test_tokenizers.py  test_train.py
tests/data/: 200_internal_terminal.md  200_internal_terminal.txt  250_internal.fq  250_internal.parquet  250_negative.fq  250_negative.parquet  250_terminal.fq  4reads.bam  4reads.bam.bai  6000_test.parquet  6000_val.parquet  input_ids.pt  input_quals.pt  one_record.fq  raw_no_trim.fastq  simple.fq  test.fa  test_a549.internal.fastq  test_a549.internal.parquet  twenty_five_records.fq  twenty_five_records.parquet
(+63 files in other folders)
