[package]
name = "deepchopper"
version = "1.2.5"
edition = "2021"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
description = "A Genomic Language Model for Chimera Artifact Detection in Nanopore Direct RNA Sequencing"
documentation = "https://github.com/ylab-hi/DeepChopper"
homepage = "https://serde.rs"
repository = "https://github.com/ylab-hi/DeepChopper"
license = "Apache-2.0"
readme = "README.md"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "deepchopper"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "deepchopper-chop"
path = "src/bin/predict.rs"

# Other binaries (not published)
[[bin]]
name = "blat"
path = "src/bin/blat.rs"
required-features = ["dev"]

[[bin]]
name = "chemericstat"
path = "src/bin/chemericstat.rs"
required-features = ["dev"]

[[bin]]
name = "diff"
path = "src/bin/diff.rs"
required-features = ["dev"]

[[bin]]
name = "encode"
path = "src/bin/encode.rs"
required-features = ["dev"]

[[bin]]
name = "eval"
path = "src/bin/eval.rs"
required-features = ["dev"]

[[bin]]
name = "fq2fa"
path = "src/bin/fq2fa.rs"
required-features = ["dev"]

[[bin]]
name = "fqsearch"
path = "src/bin/fqsearch.rs"
required-features = ["dev"]

[[bin]]
name = "read"
path = "src/bin/read.rs"
required-features = ["dev"]

[[bin]]
name = "replacebam"
path = "src/bin/replacebam.rs"
required-features = ["dev"]

[[bin]]
name = "replacefq"
path = "src/bin/replacefq.rs"
required-features = ["dev"]

[[bin]]
name = "sa"
path = "src/bin/sa.rs"
required-features = ["dev"]

[[bin]]
name = "scdiff"
path = "src/bin/scdiff.rs"
required-features = ["dev"]

[[bin]]
name = "select"
path = "src/bin/select.rs"
required-features = ["dev"]

[[bin]]
name = "tmp"
path = "src/bin/tmp.rs"
required-features = ["dev"]


[features]
default = []
dev = []

[profile.dev]
debug = 1

[profile.release]
lto = true
codegen-units = 1
# panic = "abort"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
walkdir = { version = "2.5" }
rayon = { version = "1.10" }
pyo3 = { version = "0.21.2", features = [
    "abi3-py310",
    "extension-module",
    "anyhow",
] }

ctrlc = "3.4"
log = "0.4"
pyo3-log = "0.10"
noodles = { version = "0.83.0", features = [
    "bgzf",
    "core",
    "csi",
    "fasta",
    "fastq",
    "sam",
    "bam",
] }

bio = "2.0"
needletail = "0.5"
ahash = "0.8.11"
numpy = "0.21"
ndarray = { version = "0.15", features = ["serde", "rayon"] }
num-traits = { version = "0.2" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
bitvec = "1.0"
itertools = "0.13.0"
derive_builder = "0.20"
lexical = "7.0"
bstr = "1.10.0"
lazy_static = "1.5.0"
tempfile = "3.13"
parquet = "52.2.0"
arrow = "52.2"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
colored = "2"
textwrap = "0.16"
flate2 = { version = "1.0.34", features = [
    "zlib-ng",
], default-features = false }


# binaries
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11"
human-panic = "2.0"


[dev-dependencies]


[build-dependencies]
pyo3-build-config = "0.22"
