[package]
name = "deepchopper"
version = "1.3.0"
edition = "2021"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
description = "A Genomic Language Model for Chimera Artifact Detection in Nanopore Direct RNA Sequencing"
documentation = "https://github.com/ylab-hi/DeepChopper"
homepage = "https://serde.rs"
repository = "https://github.com/ylab-hi/DeepChopper"
license = "Apache-2.0"
readme = "README.md"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "deepchopper"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "deepchopper-chop"
path = "src/bin/predict.rs"

# Other binaries (not published)
[[bin]]
name = "blat"
path = "src/bin/blat.rs"
required-features = ["dev"]

[[bin]]
name = "chimericstat"
path = "src/bin/chimericstat.rs"
required-features = ["dev"]

[[bin]]
name = "diff"
path = "src/bin/diff.rs"
required-features = ["dev"]

[[bin]]
name = "encode"
path = "src/bin/encode.rs"
required-features = ["dev"]

[[bin]]
name = "eval"
path = "src/bin/eval.rs"
required-features = ["dev"]

[[bin]]
name = "fq2fa"
path = "src/bin/fq2fa.rs"
required-features = ["dev"]

[[bin]]
name = "fqsearch"
path = "src/bin/fqsearch.rs"
required-features = ["dev"]

[[bin]]
name = "read"
path = "src/bin/read.rs"
required-features = ["dev"]

[[bin]]
name = "replacebam"
path = "src/bin/replacebam.rs"
required-features = ["dev"]

[[bin]]
name = "replacefq"
path = "src/bin/replacefq.rs"
required-features = ["dev"]

[[bin]]
name = "sa"
path = "src/bin/sa.rs"
required-features = ["dev"]

[[bin]]
name = "scdiff"
path = "src/bin/scdiff.rs"
required-features = ["dev"]

[[bin]]
name = "select"
path = "src/bin/select.rs"
required-features = ["dev"]

[[bin]]
name = "tmp"
path = "src/bin/tmp.rs"
required-features = ["dev"]


[features]
default = []
dev = []

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
codegen-units = 16
opt-level = 3
# panic = "abort"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
walkdir = { version = "2.5" }
rayon = { version = "1.11" }
pyo3 = { version = "0.27.2", features = [
  "abi3-py310",
  "extension-module",
  "anyhow",
] }

ctrlc = "3.5"
log = "0.4"
pyo3-log = "0.13.2"
noodles = { version = "0.104.0", features = [
  "bgzf",
  "core",
  "csi",
  "fasta",
  "fastq",
  "sam",
  "bam",
] }

bio = "3.0"
needletail = "0.6.3"
ahash = "0.8.12"
numpy = "0.27.1"
ndarray = { version = "0.17", features = ["serde", "rayon"] }
num-traits = { version = "0.2" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bitvec = "1.0"
itertools = "0.14.0"
derive_builder = "0.20"
lexical = "7.0"
bstr = "1.12.1"
lazy_static = "1.5.0"
tempfile = "3.24"
parquet = "57.2"
arrow = "57.2"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
colored = "3"
textwrap = "0.16"
flate2 = { version = "1.1.8", features = ["zlib-rs"], default-features = false }

# binaries
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11"
human-panic = "2.0"
sysinfo = "0.37"

[dev-dependencies]


[build-dependencies]
pyo3-build-config = "0.27"
