[build-system]
requires = ["maturin>=1.2.1,<2"]
build-backend = "maturin"

[tool.poetry]
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
license = "Apache-2.0"
name = "deepchopper"
version = "1.2.1"
description = "A Genomic Language Model for Chimera Artifact Detection in Nanopore Direct RNA Sequencing"
readme = "README.md"

[project]
name = "deepchopper"
description = "A Genomic Language Model for Chimera Artifact Detection in Nanopore Direct RNA Sequencing"
authors = [{ name = "Yangyang Li", email = "<yangyang.li@northwestern.edu>" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["deep learning", "bioinformatics", "rust"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch>=2.1.0",
    "lightning>=2.1.2",
    "torchmetrics>=1.2.1",
    "rich>=13.7.0",
    "transformers>=4.37.2",
    "safetensors>=0.4.2",
    "datasets>=2.17.1",
    "evaluate>=0.4.1",
    "typer>=0.12.0",
    "gradio==5.0.1",
    "fastapi==0.112.2",
    "scikit-learn>=1.5.2",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "deepchopper-cli>=1.0.1",
]

[project.urls]
homepage = "https://github.com/ylab-hi/DeepChopper"
documentation = "https://github.com/ylab-hi/DeepChopper"
repository = "https://github.com/ylab-hi/DeepChopper"
changelog = "https://github.com/ylab-hi/DeepChopper/README.md"


[project.scripts]
deepchopper = "deepchopper.cli:app"

[tool.poetry.scripts]
dc-train = "deepchopper.train:main"
dc-eval = "deepchopper.eval:main"
deepchopper = "deepchopper.cli:app"

[tool.poe.tasks.train]
cmd = "dc-train"
env = { DC_CONFIG_PATH = "${POE_PWD}/configs" }

[tool.poe.tasks.eval]
cmd = "dc-eval"
env = { DC_CONFIG_PATH = "${POE_PWD}/configs" }

[tool.poetry.dependencies]
python = "^3.10, <=3.12"
torch = [
    { version = "^2.1.0+cu118", source = "pytorch", markers = "sys_platform == 'linux'" },
    { version = "^2.1.0", source = "PyPI", markers = "sys_platform == 'darwin'" },
]
lightning = "^2.1.2"
torchmetrics = "^1.2.1"
rich = "^13.7.0"
transformers = "^4.37.2"
safetensors = "^0.4.2"
datasets = "^2.17.1"
evaluate = "^0.4.1"
typer = "^0.12.0"
gradio = "5.0.1"
fastapi = "0.112.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
torchinfo = "^1.8.0"
tokenizers = "^0.15.2"
einops = "^0.7.0"
seqeval = "^1.2.2"
pandas = "^2.2.0"
scipy = "1.11.3"
pyarrow = "^15.0.0"
pytest-sugar = "^0.9.7"
pytest = "^7.4.3"
ipdb = "^0.13.13"
setuptools = "^68.2.2"
distribute = "^0.7.3"
interrogate = "^1.5.0"
maturin = "^1.3.2"
nvitop = "^1.3.1"
poethepoet = "^0.24.3"
pynvim = "^0.5.0"
invoke = "^2.2.0"
patchelf = { version = "^0.17.2.1", markers = "sys_platform == 'linux'" }
ipykernel = "^6.29.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
fire = "^0.5.0"
wandb = "^0.17.0"
ruff = "^0.4.7"
hydra-submitit-launcher = "^1.2.1"
onnx = "^1.16.0"
onnxscript = "^0.1.0.dev20240407"
plotly = "^5.20.0"
joblib = "^1.4.0"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.1"
hydra-optuna-sweeper = "^1.2.1"
omegaconf = "^2.3.0"
accelerate = "^0.27.2"
deepspeed = "^0.13.4"
deptry = "^0.20.0"
nvidia-cuda-cupti-cu11 = { version = "^11.8.87", markers = "sys_platform == 'linux'" }
nvidia-cuda-nvrtc-cu11 = { version = "^11.8.89", markers = "sys_platform == 'linux'" }
nvidia-cuda-runtime-cu11 = { version = "^11.8.89", markers = "sys_platform == 'linux'" }
nvidia-cudnn-cu11 = { version = "^8.9.6.50", markers = "sys_platform == 'linux'" }
nvidia-cufft-cu11 = { version = "^10.9.0.58", markers = "sys_platform == 'linux'" }
nvidia-curand-cu11 = { version = "^10.3.0.86", markers = "sys_platform == 'linux'" }
nvidia-cusolver-cu11 = { version = "^11.4.1.48", markers = "sys_platform == 'linux'" }
nvidia-cusparse-cu11 = { version = "^11.7.5.86", markers = "sys_platform == 'linux'" }
nvidia-nccl-cu11 = { version = "^2.19.3", markers = "sys_platform == 'linux'" }
nvidia-nvtx-cu11 = { version = "^11.8.86", markers = "sys_platform == 'linux'" }
nvidia-cublas-cu11 = { version = "^11.11.3.6", markers = "sys_platform == 'linux'" }
mamba-ssm = { version = "^1.2.1.post1", markers = "sys_platform == 'linux'" }
causal-conv1d = { version = "^1.2.1.post2", markers = "sys_platform == 'linux'" }
bump-my-version = "^0.27.0"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
exclude = [
    "tests/*",
    "scripts/*",
    "docs/conf.py",

    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tasks.py",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "ANN",
    "D",
    "A",
    "F",
    "E",
    "W",
    "C90",
    "I",
    "UP",
    "N",
    "YTT",
    "TID",
    "S",
    "BLE",
    "FBT",
    "PLR",
    "B",
    "B9",
    "A",
    "C4",
    "T10",
    "EM",
    "ICN",
    "T20",
    "Q",
    "RET",
    "SIM",
    "ARG",
    "DTZ",
    "ERA",
    "PD",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "RUF",
    "PL",
    "TD",
    "FIX",
    "PTH",
    "TCH",
    "SLOT",
    "PT",
    "PYI",
    "PIE",
    "ISC",
    "FA",
    "EXE",
    # "CPY",
    "COM",
]

ignore = [
    "E501",
    "D203",
    "D100",
    "D401",
    "ANN101",
    "ANN102",
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "PGH003",
    "N802",
    "N803",
    "N806",
    "N815",
    "EM101",
    # formater conflict
    'COM812',
    'COM819',
    'D206',
    'ISC001',
    'Q000',
    'Q001',
    'Q002',
    'Q003',
    'W191',
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
# magic-trailing-comma = "respect"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"deepchopper/data/mnist_datamodule.py" = ["ARG002", "PLR0913", "D205", "D402"]
"deepchopper/models/mnist_module.py" = ["ARG002", "A002"]
"deepchopper/utils/pylogger.py" = ["D205", "PLR5501", "SIM114"]
"deepchopper/models/components/simple_dense_net.py" = ["ARG002", "PLR0913"]
"deepchopper/eval.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.coverage.paths]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["deepchopper"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
ignore_errors = true
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests/"
log_cli = "True"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
markers = [
    "smoke: a quick smoke test",
    "failing: failing tests",
    "imports: importing tests",
    "slow: slow tests",
]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
    "--import-mode=importlib",
]
