[build-system]
requires = ["maturin>=1.2.1,<2"]
build-backend = "maturin"

[project]
name = "deepchopper-cli"
version = "1.1.0"
description = "CLI for DeepChopper: A Genomic Language Model for Chimera Artifact Detection"
authors = [{ name = "Yangyang Li", email = "yangyang.li@northwestern.edu" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["deep learning", "bioinformatics", "rust"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
homepage = "https://github.com/ylab-hi/DeepChopper"
documentation = "https://github.com/ylab-hi/DeepChopper"
repository = "https://github.com/ylab-hi/DeepChopper"
changelog = "https://github.com/ylab-hi/DeepChopper/README.md"

[tool.maturin]
manifest-path = "../Cargo.toml"
